--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "author": "Hebilicious",
   "scripts": {
-    "dev": "babel-node app.js --presets es2015,stage-2",
-    "build": "babel app.js -o dist/app.js --presets es2015,stage-2"
+    "dev": "babel-node bot/app.js --presets es2015,stage-2",
+    "build": "babel bot -d dist --presets es2015,stage-2"
   },
   "license": "MIT",
   "dependencies": {
