--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.3.0"
+    "discord.js": "^11.3.0",
+    "moment-timezone": "^0.5.14",
+    "node-schedule": "^1.3.0",
+    "sugar": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
