--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "discord.js": "^11.3.0",
     "moment-timezone": "^0.5.14",
-    "node-schedule": "^1.3.0",
+    "rethinkdb": "^2.3.3",
     "sugar": "^2.0.4"
   },
   "devDependencies": {
