--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "ups-chan",
-  "version": "0.1.0",
+  "name": "UPS-chan",
+  "version": "0.5.0",
   "description": "UPS guild bot",
   "main": "app.js",
   "author": "Hebilicious",
   "scripts": {
-    "dev": "babel-node bot/app.js --presets es2015,stage-2",
-    "build": "babel bot -d dist --presets es2015,stage-2"
+    "dev": "webpack --watch",
+    "build": "webpack -p",
+    "build-nowp": "babel bot -d dist"
   },
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.3.0",
     "moment-timezone": "^0.5.14",
     "rethinkdb": "^2.3.3",
-    "sugar": "^2.0.4"
+    "sugar": "^2.0.4",
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "nodemon-webpack-plugin": "^0.1.6",
+    "webpack-node-externals": "^1.6.0"
   }
 }
