Changing babelrc for build

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,8 @@
       "env",
       {
         "targets": {
-          "node": "current"
+          "node": "current",
+          "browsers": ["last 2 versions"]
         }
       }
     ]
