--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "gifencoder": "^1.1.0",
     "nodemon-webpack-plugin": "^0.1.6",
+    "sanitize-filename": "^1.6.1",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
   }
