--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^11.3.0",
     "moment-timezone": "^0.5.14",
+    "prettier": "^1.10.2",
     "rethinkdb": "^2.3.3",
     "sugar": "^2.0.4"
   },
