Updating project dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "node": "current",
@@ -10,5 +10,5 @@
       }
     ]
   ],
-  "plugins": [["transform-object-rest-spread", {"useBuiltIns": true}]]
+  "plugins": ["@babel/transform-runtime", "@babel/plugin-proposal-object-rest-spread"]
 }
