--- a/package.json
+++ b/package.json
@@ -10,26 +10,25 @@
   },
   "license": "MIT",
   "dependencies": {
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
     "discord.js": "^11.3.0",
+    "gifencoder": "^1.1.0",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
     "moment-timezone": "^0.5.14",
-    "prettier": "^1.10.2",
-    "rethinkdb": "^2.3.3",
     "rethinkdbdash": "^2.3.31",
+    "sanitize-filename": "^1.6.1",
     "sugar": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "gifencoder": "^1.1.0",
+    "@babel/core": "^7.0.0-beta.39",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.39",
+    "@babel/preset-env": "^7.0.0-beta.39",
+    "@babel/runtime": "^7.0.0-beta.39",
+    "babel-loader": "8.0.0-beta.0",
     "nodemon-webpack-plugin": "^0.1.6",
-    "sanitize-filename": "^1.6.1",
+    "prettier": "^1.10.2",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
   }
