--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "author": "Hebilicious",
   "scripts": {
-    "dev": "webpack --watch",
-    "build": "webpack -p"
+    "dev": "webpack --watch --config webpack/webpack.dev.js",
+    "lint": "prettier --write",
+    "build": "webpack --config webpack/webpack.prod.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,15 +22,19 @@
     "sugar": "^2.0.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "@babel/core": "^7.0.0-beta.39",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
     "@babel/runtime": "^7.0.0-beta.39",
     "babel-loader": "8.0.0-beta.0",
-    "nodemon-webpack-plugin": "^0.1.6",
+    "clean-webpack-plugin": "^0.1.18",
+    "node-dev": "^3.1.3",
     "prettier": "^1.10.2",
+    "source-map-support": "^0.5.3",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-merge": "^4c.1.1",
+    "webpack-shell-plugin": "^0.5.0",
+    "webpack2-externals-plugin": "^1.0.0"
   }
 }
