--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "UPS-chan",
+  "name": "ups-chan",
   "version": "0.5.0",
   "description": "UPS guild bot",
-  "main": "app.js",
+  "main": "dist/dist.js",
   "author": "Hebilicious",
   "scripts": {
     "dev": "webpack --watch --config webpack/webpack.dev.js",
-    "lint": "prettier --write",
-    "build": "webpack --config webpack/webpack.prod.js"
+    "lint": "prettier --write {bot,webpack}/**/**.js",
+    "build": "npm run lint && webpack --config webpack/webpack.prod.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -33,7 +33,7 @@
     "source-map-support": "^0.5.3",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
-    "webpack-merge": "^4c.1.1",
+    "webpack-merge": "^4.1.1",
     "webpack-shell-plugin": "^0.5.0",
     "webpack2-externals-plugin": "^1.0.0"
   }
