--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Hebilicious",
   "scripts": {
     "dev": "webpack --watch --config webpack/webpack.dev.js",
+    "debug": "webpack --watch --config webpack/webpack.debug.js",
     "lint": "prettier --write {bot,webpack}/**/**.js",
     "build": "npm run lint && webpack --config webpack/webpack.prod.js"
   },
