--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack --watch --config webpack/webpack.dev.js",
     "debug": "webpack --watch --config webpack/webpack.debug.js",
     "lint": "prettier --write {bot,webpack}/**/**.js",
-    "build": "npm run lint && webpack --config webpack/webpack.prod.js"
+    "build": "npm run lint && webpack --config webpack/webpack.prod.js",
+    "prepush": "npm run build"
   },
   "license": "MIT",
   "dependencies": {
@@ -29,6 +30,7 @@
     "@babel/runtime": "^7.0.0-beta.39",
     "babel-loader": "8.0.0-beta.0",
     "clean-webpack-plugin": "^0.1.18",
+    "husky": "^0.14.3",
     "node-dev": "^3.1.3",
     "prettier": "^1.10.2",
     "source-map-support": "^0.5.3",
