--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "webpack --watch --config webpack/webpack.dev.js",
     "debug": "webpack --watch --config webpack/webpack.debug.js",
     "lint": "prettier --write {bot,webpack}/**/**.js",
-    "build": "npm run lint && webpack --config webpack/webpack.prod.js",
-    "prepush": "npm run build"
+    "test": "mocha --require @babel/register --slow 0",
+    "prod": "webpack --config webpack/webpack.prod.js",
+    "build": "npm run test && npm run lint && npm run prod",
+    "prepush": "npm run lint"
   },
   "license": "MIT",
   "dependencies": {
@@ -27,10 +29,13 @@
     "@babel/core": "^7.0.0-beta.39",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
+    "@babel/register": "^7.0.0-beta.39",
     "@babel/runtime": "^7.0.0-beta.39",
     "babel-loader": "8.0.0-beta.0",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.18",
     "husky": "^0.14.3",
+    "mocha": "^5.0.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.10.2",
     "source-map-support": "^0.5.3",
