--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "axios": "^0.17.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "discord.js": "^11.3.0",
+    "erlpack": "hammerandchisel/erlpack",
     "gifencoder": "^1.1.0",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
     "moment-timezone": "^0.5.14",
     "rethinkdbdash": "^2.3.31",
     "sanitize-filename": "^1.6.1",
-    "sugar": "^2.0.4"
+    "sugar": "^2.0.4",
+    "uws": "^9.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
