--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-loader": "8.0.0-beta.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.18",
-    "husky": "^0.14.3",
+    "husky": "^0.15.0-rc.6",
     "mocha": "^5.0.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.10.2",
