--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.0",
     "erlpack": "hammerandchisel/erlpack",
     "gifencoder": "^1.1.0",
