--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "erlpack": "hammerandchisel/erlpack",
     "gifencoder": "^1.1.0",
     "js-yaml": "^3.10.0",
+    "leven": "^2.1.0",
     "lodash": "^4.17.4",
     "moment-timezone": "^0.5.14",
+    "number-to-words": "^1.2.3",
     "rethinkdbdash": "^2.3.31",
     "sanitize-filename": "^1.6.1",
     "sugar": "^2.0.4",
-    "uws": "^9.14.0"
+    "uws": "^9.14.0",
+    "words-to-num": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
