--- a/package.json
+++ b/package.json
@@ -17,33 +17,34 @@
     "axios": "^0.17.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.3.0",
-    "erlpack": "hammerandchisel/erlpack",
+    "discord.js": "^11.3.2",
     "gifencoder": "^1.1.0",
-    "js-yaml": "^3.10.0",
-    "lodash": "^4.17.4",
-    "moment-timezone": "^0.5.14",
+    "js-yaml": "^3.12.0",
+    "lodash": "^4.17.10",
+    "moment-timezone": "^0.5.21",
+    "nodemon-webpack-plugin": "^3.0.1",
     "rethinkdbdash": "^2.3.31",
     "sanitize-filename": "^1.6.1",
     "sugar": "^2.0.4",
-    "uws": "^9.14.0"
+    "uws": "^9.148.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.39",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.39",
-    "@babel/preset-env": "^7.0.0-beta.39",
-    "@babel/register": "^7.0.0-beta.39",
-    "@babel/runtime": "^7.0.0-beta.39",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/register": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.0.0-beta.55",
     "babel-loader": "8.0.0-beta.0",
     "chai": "^4.1.2",
-    "clean-webpack-plugin": "^0.1.18",
-    "mocha": "^5.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "mocha": "^5.2.0",
     "node-dev": "^3.1.3",
-    "prettier": "^1.10.2",
-    "source-map-support": "^0.5.3",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1",
+    "prettier": "^1.14.0",
+    "source-map-support": "^0.5.6",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4",
     "webpack-shell-plugin": "^0.5.0",
     "webpack2-externals-plugin": "^1.0.0"
   }
